# Equicloud

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  PRIVACY.md  README.md  compose.yml
.github/workflows/: docker.yml  lint.yml
migrations/: 000_create_keyspace.cql  001_create_users_table.cql  002_add_created_at_index.cql  003_create_data_table.cql  004_add_updated_at_index.cql
src/: main.rs
src/lib/: constants.rs  database.rs  hash_migration.rs  migrations.rs  mod.rs  settings_handlers.rs  utils.rs
src/middleware/: auth.rs
src/routes/: health.rs  metrics.rs  mod.rs
src/routes/v1/: delete.rs  mod.rs  settings.rs
src/routes/v1/oauth/: callback.rs  mod.rs  settings.rs
src/routes/v2/: data.rs  manifest.rs  mod.rs  sync.rs
