[package]
name = "equicloud"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["v4"] }
dotenv = "0.15"
chrono = { version = "0.4.42", features = ["serde"] }
urlencoding = "2.1"
scylla = "1.3.1"
anyhow = "1.0.100"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
hex = "0.4"
crc32fast = "1.4"
base64 = "0.22"
