[package]
name = "equicloud"
version = "0.1.4"
edition = "2024"

[lib]
name = "equicloud"
path = "src/lib/mod.rs"

[[bin]]
name = "equicloud"
path = "src/main.rs"

[[bin]]
name = "migrate_legacy_users"
path = "src/bin/migrate_legacy_users.rs"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["v4"] }
dotenv = "0.15"
chrono = { version = "0.4.42", features = ["serde"] }
urlencoding = "2.1.3"
scylla = "1.3.1"
anyhow = "1.0.100"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
reqwest = { version = "0.12.23", features = ["json"] }
rand = "0.9.2"
hex = "0.4.3"
base64 = "0.22.1"
once_cell = "1.21.3"
sha2 = "0.10.8"
crc32fast = "1.5.0"
zstd = "0.13"
futures = "0.3"
